[package]
name = "praborrow-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Procedural macros for PraBorrow defense and verification logic."

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "visit", "extra-traits"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }
